added vimtex plugin and numerous snippets for LaTeX and C++ and for creating snippets

--- a/.config/nvim/snippets/package.json
+++ b/.config/nvim/snippets/package.json
@@ -3,8 +3,16 @@
   "contributes": {
     "snippets": [
       {
+        "language": ["tex"],
+        "path": "./tex.json"
+      },
+      {
         "language": ["cpp"],
         "path": "./cpp.json"
+      },
+      {
+        "language": ["json"],
+        "path": "./json.json"
       }
     ]
   }
