--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -17,7 +17,7 @@
 # ===================================================================
 
 # ===================================================================
-# == Options
+# == Options ========================================================
 # ===================================================================
 
 # Which viewmode should be used?  Possible values are:
@@ -34,12 +34,12 @@ set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden false
+set show_hidden true
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
-set confirm_on_delete multiple
+set confirm_on_delete all
 
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -128,7 +128,7 @@ set iterm2_font_width 8
 set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
-set unicode_ellipsis false
+set unicode_ellipsis true
 
 # BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
 # Requires the python-bidi pip package
@@ -139,13 +139,13 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme default
+set colorscheme dracula
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
 set preview_directories true
-set collapse_preview true
+set collapse_preview false
 
 # Wrap long lines in plain text previews?
 set wrap_plaintext_previews false
@@ -164,7 +164,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders both
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -173,11 +173,11 @@ set dirname_in_tabs false
 set mouse_enabled true
 
 # Display the file size in the main column or status bar?
-set display_size_in_main_column true
+set display_size_in_main_column false
 set display_size_in_status_bar true
 
 # Display the free disk space in the status bar?
-set display_free_space_in_status_bar true
+set display_free_space_in_status_bar false
 
 # Display files tags in all columns or only in main column?
 set display_tags_in_all_columns true
@@ -193,10 +193,10 @@ set update_tmux_title true
 set shorten_title 3
 
 # Show hostname in titlebar?
-set hostname_in_titlebar true
+set hostname_in_titlebar false
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar false
+set tilde_in_titlebar true
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
@@ -242,7 +242,7 @@ set sort_unicode false
 
 # Enable this if key combinations with the Alt Key don't work for you.
 # (Especially on xterm)
-set xterm_alt_key false
+set xterm_alt_key true
 
 # Whether to include bookmarks in cd command
 set cd_bookmarks true
@@ -294,7 +294,7 @@ set save_tabs_on_exit false
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
-set wrap_scroll false
+set wrap_scroll true
 
 # Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
 # directories, files and symlinks respectively.
@@ -313,7 +313,7 @@ set size_in_bytes false
 set nested_ranger_warning true
 
 # ===================================================================
-# == Local Options
+# == Local Options ==================================================
 # ===================================================================
 # You can set local options that only affect a single directory.
 
@@ -321,7 +321,7 @@ set nested_ranger_warning true
 # setlocal path=~/downloads sort mtime
 
 # ===================================================================
-# == Command Aliases in the Console
+# == Command Aliases in the Console =================================
 # ===================================================================
 
 alias e     edit
@@ -342,7 +342,7 @@ alias search_inc scout -rts
 alias travel     scout -aefklst
 
 # ===================================================================
-# == Define keys for the browser
+# == Define keys for the browser ====================================
 # ===================================================================
 
 # Basic
@@ -636,7 +636,7 @@ eval for arg in "rwxXst": cmd("map -a{0} shell -f chmod a-{0} %s".format(arg))
 eval for arg in "rwxXst": cmd("map -{0}  shell -f chmod u-{0} %s".format(arg))
 
 # ===================================================================
-# == Define keys for the console
+# == Define keys for the console ====================================
 # ===================================================================
 # Note: Unmapped keys are passed directly to the console.
 
@@ -691,7 +691,7 @@ copycmap <backspace> <backspace2>
 cmap <allow_quantifiers> false
 
 # ===================================================================
-# == Pager Keybindings
+# == Pager Keybindings ==============================================
 # ===================================================================
 
 # Movement
@@ -724,7 +724,7 @@ copypmap <ESC> q Q i <F3>
 pmap E      edit_file
 
 # ===================================================================
-# == Taskview Keybindings
+# == Taskview Keybindings ===========================================
 # ===================================================================
 
 # Movement
@@ -757,3 +757,8 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# ===================================================================
+# == Plugins ========================================================
+# ===================================================================
+default_linemode devicons
