improved cleaned up nvim config

--- a/.config/nvim/snippets/package.json
+++ b/.config/nvim/snippets/package.json
@@ -9,6 +9,10 @@
       {
         "language": ["json"],
         "path": "./json.json"
+      },
+      {
+        "language": ["lua"],
+        "path": "./lua.json"
       }
     ]
   }
