created a script for automating the process of updating this repo, removed tmux statusline plugin for configuring it myself, tweaks to yazi colorscheme

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -4,7 +4,7 @@ bold_font        family='FiraCode Nerd Font' style=Regular
 italic_font      family='FiraCode Nerd Font' style=Regular
 bold_italic_font family='FiraCode Nerd Font' style=Regular
 
-font_size 15
+font_size 14.5
 modify_font underline_position 2
 undercurl_style thin-sparse
 
@@ -13,15 +13,8 @@ placement_strategy top
 
 # colorscheme
 include kanagawa.conf
-# background_opacity 0.96
-# transparent_background_colors #15151c@0.9 #16161D@0 #1f1f28@1 #2a2a37@0.9 #363646@0.95
-# sumiInk0 = "#16161D", devrait être term
-# sumiInk1 = "#181820", ### ?
-# sumiInk2 = "#1a1a22", ### ?
-# sumiInk3 = "#1F1F28", ### main background
-# sumiInk4 = "#2A2A37", ### statuscolumn / lualine/tmuxline bg # winseparator
-# sumiInk5 = "#363646", ### cursorline
-######## sumiInk6 = "#54546D", lualine grey
+background_opacity 0.96
+# transparent_background_colors #15151c@0.96 #111116@0.96 #17171e@0.96 #2a2a37@0.96 #363646@0.96
 
 # cursor
 cursor_shape block
