--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -34,44 +34,23 @@ bind % split-window -h -c "#{pane_current_path}"
 
 
 # Statusline
-set -g @plugin "dracula/tmux"
-set -g @dracula-plugins "battery network time"
-set -g @dracula-show-empty-plugins false
+set -g status-style bg="#2A2A37"
+set -g mode-style bg="#223249"
+set -g message-style fg="#DCD7BA"
+set -g clock-mode-style 24
+set -g status-interval 1
 
-set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon session
-set -g @dracula-left-icon-padding 0
-set -g @dracula-show-flags false # flags like * or -
-set -g @dracula-border-contrast true
+set -g status-left "#[fg=#2A2A37,bg=#98BB6C] #{session_name} #[fg=#98BB6C,bg=#2A2A37]" # 
+set -g status-left-length 12
 
-set -g @dracula-show-battery-status false
-set -g @dracula-battery-label "󰢝 "
-set -g @dracula-no-battery-label " "
+set -g status-right "#[fg=#D27E99,bg=#2A2A37,nobold,nounderscore,noitalics]#[fg=#2A2A37,bg=#D27E99] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#DCA561,bg=#D27E99,nobold,nounderscore,noitalics]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#DCA561,nobold,nounderscore,noitalics]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
 
-set -g @dracula-network-colors "orange dark_gray"
-set -g @dracula-network-ethernet-label "󰌘"
-set -g @dracula-network-offline-label "󱍢"
-set -g @dracula-network-wifi-label ""
+set -g window-status-current-format "#[fg=#2A2A37,bg=#54545D]#[fg=#DCD7BA,bg=#54546D]#{window_index}-#{window_name}#[fg=#54546D,bg=#2A2A37]"
+set -g window-status-format "#[fg=#2A2A37,bg=#363646]#[fg=#DCD7BA,bg=#363646]#{window_index}-#{window_name}#[fg=#363646,bg=#2A2A37]"
+set -g window-status-activity-style "bold"
 
-set -g @dracula-time-colors "cyan dark_gray"
-set -g @dracula-show-timezone false
-set -g @dracula-day-month true
-set -g @dracula-military-time true
-
-set -g @dracula-show-location false
-set -g @dracula-show-fahrenheit false
-
-set -g @dracula-colors "
-  white='#DCD7BA' # statusline text
-  dark_gray='#2A2A37' # statusline indicators text
-  light_purple='#2A2A37' # borders for active pane when contrast is set
-  gray='#2A2A37' # statusline bg & borders for inactive panes
-  dark_purple='#54546D' # active tab highlight & borders for active pane when contrast is off
-  green='#98BB6C' # session
-  pink='#D27E99' # battery
-  cyan='#7E9CD8' # date
-  orange='#DCA561' # network
-"
+set -g pane-border-style fg="#54546D"
+set -g pane-active-border-style fg="#54546D"
 
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
@@ -81,6 +60,7 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-resurrect"
 set -g @resurrect-strategy-nvim "session"
 set -g @resurrect-capture-pane-contents "on"
+set -g @resurrect-processes "yazi ncdu help"
 set -g @plugin "tmux-plugins/tmux-continuum"
 
 set -g @plugin "tmux-plugins/tmux-yank"
