--- a/config/i3/config
+++ b/config/i3/config
@@ -10,7 +10,7 @@ font pango:FiraCode Nerd Font 10
 # picom
 exec --no-startup-id picom
 # wallpaper
-exec --no-startup-id feh --bg-fill --no-fehbg ~/.config/wallpapers/eerie_landscape.png
+exec --no-startup-id feh --bg-fill --no-fehbg ~/.config/wallpapers/kanagawa.jpg
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -20,7 +20,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Hide borders
-default_border pixel 1
+default_border pixel 2
 
 # reload config
 bindsym $mod+Shift+r reload
@@ -110,9 +110,9 @@ tiling_drag modifier titlebar
 bindsym $mod+Shift+space floating toggle
 
 
-# default gaps
-gaps outer 21
-gaps inner 5
+# default gaps 
+gaps outer 12
+gaps inner 6
 
 # gaps
 set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
