improved colorschemes, removed i3 borders and cleanup

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -43,10 +43,10 @@ set -g status-interval 1
 set -g status-left "#[fg=#2A2A37,bg=#98BB6C] #{session_name} #[fg=#98BB6C,bg=#2A2A37]" # 
 set -g status-left-length 12
 
-set -g status-right "#[fg=#D27E99,bg=#2A2A37,nobold,nounderscore,noitalics]#[fg=#2A2A37,bg=#D27E99] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#DCA561,bg=#D27E99,nobold,nounderscore,noitalics]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#DCA561,nobold,nounderscore,noitalics]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
+set -g status-right "#[fg=#DCA561,bg=#2A2A37]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#957FB8,bg=#DCA561]#[fg=#2A2A37,bg=#957FB8] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#957FB8]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
 
-set -g window-status-current-format "#[fg=#2A2A37,bg=#54545D]#[fg=#DCD7BA,bg=#54546D]#{window_index}-#{window_name}#[fg=#54546D,bg=#2A2A37]"
-set -g window-status-format "#[fg=#2A2A37,bg=#363646]#[fg=#DCD7BA,bg=#363646]#{window_index}-#{window_name}#[fg=#363646,bg=#2A2A37]"
+set -g window-status-current-format "#[fg=#2A2A37,bg=#54545D]#[fg=#DCD7BA,bg=#54546D] #{window_index} #{window_name} #[fg=#54546D,bg=#2A2A37]"
+set -g window-status-format "#[fg=#2A2A37,bg=#363646]#[fg=#DCD7BA,bg=#363646] #{window_index} #{window_name} #[fg=#363646,bg=#2A2A37]"
 set -g window-status-activity-style "bold"
 
 set -g pane-border-style fg="#54546D"
