--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -21,3 +21,8 @@ edit = [
 open = [
   { run = 'xdg-open "$@"', desc = "Open" },
 ]
+
+[plugin]
+prepend_previewers = [
+  { name = "*.md", run = "glow" },
+]
