multiple fixes and improvements

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -14,10 +14,10 @@ placement_strategy top
 # colorscheme
 include kanagawa.conf
 background_opacity 0.96
-# transparent_background_colors #15151c@0.96 #111116@0.96 #17171e@0.96 #2a2a37@0.96 #363646@0.96
+transparent_background_colors  #15151c@0.96 #17171e@0.96 #2a2a37@0.96 #363646@0.96
 
 # cursor
-cursor_shape block
+cursor_shape beam
 cursor_shape_unfocused hollow
 cursor_blink_interval 0
 
