--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-# usr the r key to reload the tmux configuration
+# use the r key to reload the tmux configuration
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
@@ -9,9 +9,15 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# options
 setw -g mode-keys vi
+set -g status-keys vi
 set -g mouse on
+set -g cursor-style bar
 set -g status-position top
+set -s extended-keys on
+set -g bell-action none
+set -sg escape-time 1  # fix delay upon switching modes in vim
 
 # Vim style pane selection
 bind-key h select-pane -L
@@ -29,25 +35,35 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# open the command prompt with a semicolon
+bind \; command-prompt
+
+# copy mode keybindings
+bind Escape copy-mode
+bind -T copy-mode-vi v send -X begin-selection
+
 # Open new panes in cwd
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# pasting
+bind p paste-buffer    # Paste
+bind C-p choose-buffer # Tmux clipboard history
 
 # Statusline
 set -g status-style bg="#2A2A37"
 set -g mode-style bg="#223249"
-set -g message-style fg="#DCD7BA"
+set -g message-style fg="#DCD7BA",bg="#2A2A37"
 set -g clock-mode-style 24
 set -g status-interval 1
 
-set -g status-left "#[fg=#2A2A37,bg=#98BB6C] #{session_name} #[fg=#98BB6C,bg=#2A2A37]" # 
+set -g status-left "#[fg=#2A2A37,bg=#98BB6C] #{session_name} #[fg=#98BB6C,bg=#2A2A37]"
 set -g status-left-length 12
 
 set -g status-right "#[fg=#DCA561,bg=#2A2A37]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#957FB8,bg=#DCA561]#[fg=#2A2A37,bg=#957FB8] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#957FB8]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
 
-set -g window-status-current-format "#[fg=#2A2A37,bg=#54545D]#[fg=#DCD7BA,bg=#54546D] #{window_index} #{window_name} #[fg=#54546D,bg=#2A2A37]"
-set -g window-status-format "#[fg=#2A2A37,bg=#363646]#[fg=#DCD7BA,bg=#363646] #{window_index} #{window_name} #[fg=#363646,bg=#2A2A37]"
+set -g window-status-current-format "#[fg=#54546D,bg=#2A2A37]#[fg=#DCD7BA,bg=#54546D] #{window_index} #{window_name} #[fg=#54546D,bg=#2A2A37]"
+set -g window-status-format "#[fg=#1A1A22,bg=#2A2A37]#[fg=#DCD7BA,bg=#1A1A22] #{window_index} #{window_name} #[fg=#1A1A22,bg=#2A2A37]"
 set -g window-status-activity-style "bold"
 
 set -g pane-border-style fg="#54546D"
@@ -55,20 +71,18 @@ set -g pane-active-border-style fg="#54546D"
 
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "christoomey/vim-tmux-navigator"
+
+set -g @plugin "sainnhe/tmux-fzf"
+TMUX_FZF_LAUNCH_KEY="C-f"
 
 set -g @plugin "tmux-plugins/tmux-resurrect"
 set -g @resurrect-strategy-nvim "session"
 set -g @resurrect-capture-pane-contents "on"
 set -g @resurrect-processes "yazi ncdu help"
 set -g @plugin "tmux-plugins/tmux-continuum"
-
-set -g @plugin "tmux-plugins/tmux-yank"
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 
 # run tpm
