--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -13,8 +13,8 @@ placement_strategy top
 
 # colorscheme
 include kanagawa.conf
-background_opacity 0.96
-transparent_background_colors  #15151c@0.96 #17171e@0.96 #2a2a37@0.96 #363646@0.96
+background_opacity 0.97
+transparent_background_colors  #15151c #17171e #2a2a37 #363646
 
 # cursor
 cursor_shape beam
