--- a/config/ripgrep.conf
+++ b/config/ripgrep.conf
@@ -2,7 +2,8 @@
 --hidden
 
 # ignore .git folders and zsh history
---glob=!.git/*!zsh_history
+--glob=!.git/*
+--glob=!zsh_history
 
 # use smart case
 --smart-case
