--- a/config/git/config
+++ b/config/git/config
@@ -14,7 +14,8 @@
 [interactive]
   diffFilter = delta --color-only
 [delta]
-  theme = Kanagawa
+  syntax-theme = Kanagawa
+  side-by-side = true
   line-numbers = true
   navigate = true  # use n and N to move between diff sections
   dark = true      # or light = true, or omit for auto-detection
