--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -50,6 +50,10 @@ bind % split-window -h -c "#{pane_current_path}"
 bind p paste-buffer    # Paste
 bind C-p choose-buffer # Tmux clipboard history
 
+# disable confirmation when killing a window or pane
+bind-key & kill-window
+bind-key x kill-pane
+
 # Statusline
 set -g status-style bg="#2A2A37"
 set -g mode-style bg="#223249"
@@ -62,9 +66,10 @@ set -g status-left-length 12
 
 set -g status-right "#[fg=#DCA561,bg=#2A2A37]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#957FB8,bg=#DCA561]#[fg=#2A2A37,bg=#957FB8] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#957FB8]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
 
-set -g window-status-current-format "#[fg=#54546D,bg=#2A2A37]#[fg=#DCD7BA,bg=#54546D] #{window_index} #{window_name} #[fg=#54546D,bg=#2A2A37]"
-set -g window-status-format "#[fg=#1A1A22,bg=#2A2A37]#[fg=#DCD7BA,bg=#1A1A22] #{window_index} #{window_name} #[fg=#1A1A22,bg=#2A2A37]"
+set -g window-status-current-format "#[fg=#43436C,bg=#2A2A37]#[fg=#DCD7BA,bg=#43436C] #{window_index} #{window_name} #[fg=#43436C,bg=#2A2A37]"
+set -g window-status-format "#[fg=#545464,bg=#2A2A37]#[fg=#DCD7BA,bg=#545464] #{window_index} #{window_name} #[fg=#545464,bg=#2A2A37]"
 set -g window-status-activity-style "bold"
+set -g window-status-separator ""
 
 set -g pane-border-style fg="#54546D"
 set -g pane-active-border-style fg="#54546D"
