--- a/config/yazi/package.toml
+++ b/config/yazi/package.toml
@@ -1,5 +1,5 @@
 [plugin]
-deps = [{ use = "yazi-rs/plugins:full-border", rev = "600614a" }, { use = "yazi-rs/plugins:smart-enter", rev = "600614a" }, { use = "Reledia/glow", rev = "5ce76dc" }, { use = "imsi32/yatline", rev = "9328205" }]
+deps = [{ use = "yazi-rs/plugins:full-border", rev = "600614a" }, { use = "yazi-rs/plugins:smart-enter", rev = "600614a" }, { use = "Reledia/glow", rev = "5ce76dc" }, { use = "imsi32/yatline", rev = "9328205" }, { use = "yazi-rs/plugins:jump-to-char", rev = "600614a" }]
 
 [flavor]
 deps = []
