--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -39,7 +39,7 @@ bind -n S-Right next-window
 bind \; command-prompt
 
 # copy mode keybindings
-bind Escape copy-mode
+bind v copy-mode
 bind -T copy-mode-vi v send -X begin-selection
 
 # Open new panes in cwd
