--- a/config/kitty/kanagawa.conf
+++ b/config/kitty/kanagawa.conf
@@ -19,39 +19,39 @@ inactive_tab_background         #1f1f28
 # The basic 16 colors
 
 # black
-color0  #16161d
+color0  #16161D
 color8  #727169
 
 # red
-color1  #c34043
-color9  #e82424
+color1  #C34043
+color9  #E82424
 
 # green
-color2  #76946a
-color10 #98bb6c
+color2  #76946A
+color10 #98BB6C
 
 # yellow
-color3  #c0a36e
-color11 #e6c384
+color3  #C0A36E
+color11 #E6C384
 
 # blue
-color4  #7e9cd8
-color12 #7fb4ca
+color4  #7E9CD8
+color12 #7FB4CA
 
 # magenta
-color5  #957fb8
-color13 #938aa9
+color5  #957FB8
+color13 #938AA9
 
 # cyan
-color6  #6a9589
-color14 #7aa89f
+color6  #6A9589
+color14 #7AA89F
 
 # white
-color7  #c8c093
-color15 #dcd7ba
+color7  #C8C093
+color15 #DCD7BA
 
 
 # You can set the remaining 240 colors as color16 to color255.
 
-color16 #ffa066
-color17 #ff5d62
+color16 #FFA066
+color17 #FF5D62
