--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -sa terminal-overrides ",xterm*:Tc"
+set terminal-features "cstyle"
 
 # use the r key to reload the tmux configuration
 unbind r
@@ -20,10 +21,10 @@ set -g bell-action none
 set -sg escape-time 1  # fix delay upon switching modes in vim
 
 # Vim style pane selection
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Use Meta-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -35,24 +36,28 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# open the command prompt with a semicolon
-bind \; command-prompt
+# pane movement
+bind j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # copy mode keybindings
 bind v copy-mode
 bind -T copy-mode-vi v send -X begin-selection
 
-# Open new panes in cwd
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
 # pasting
 bind p paste-buffer    # Paste
 bind C-p choose-buffer # Tmux clipboard history
 
+# Open new panes in cwd
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # disable confirmation when killing a window or pane
-bind-key & kill-window
-bind-key x kill-pane
+bind & kill-window
+bind x kill-pane
+
+# open the command prompt with a semicolon
+bind \; command-prompt
 
 # Statusline
 set -g status-style bg="#2A2A37"
