--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,98 +1,113 @@
-set -sa terminal-overrides ",xterm*:Tc"
-set terminal-features "cstyle"
+set-option -sa terminal-overrides ",xterm*:Tc"
+set-option terminal-features "cstyle"
 
 # use the r key to reload the tmux configuration
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind-key r source-file ~/.config/tmux/tmux.conf
 
 # use C-Space as prefix
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
 # options
-setw -g mode-keys vi
-set -g status-keys vi
-set -g mouse on
-set -g cursor-style bar
-set -g status-position top
-set -s extended-keys on
-set -g bell-action none
-set -sg escape-time 1  # fix delay upon switching modes in vim
+set-window-option -g mode-keys vi
+set-option -g status-keys vi
+set-option -g mouse on
+set-option -g cursor-style bar
+set-option -g status-position top
+set-option -s extended-keys on
+set-option -g bell-action none
+set-option -sg escape-time 1  # fix delay upon switching modes in vim
+set-option -g base-index 1
+
+# window selection
+bind-key -n M-1 select-window -t :1
+bind-key -n M-2 select-window -t :2
+bind-key -n M-3 select-window -t :3
+bind-key -n M-4 select-window -t :4
+bind-key -n M-5 select-window -t :5
+bind-key -n M-6 select-window -t :6
+bind-key -n M-7 select-window -t :7
+bind-key -n M-8 select-window -t :8
+bind-key -n M-9 select-window -t :9
+
+bind-key -n M-Left  swap-window -t -1
+bind-key -n M-Right swap-window -t +1
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Use Meta-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind-key -n M-Left select-pane -L
+bind-key -n M-Right select-pane -R
+bind-key -n M-Up select-pane -U
+bind-key -n M-Down select-pane -D
 
 # Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+bind-key -n S-Left  previous-window
+bind-key -n S-Right next-window
 
 # pane movement
-bind j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # copy mode keybindings
-bind v copy-mode
-bind -T copy-mode-vi v send -X begin-selection
+bind-key v copy-mode
+bind-key -T copy-mode-vi v send -X begin-selection
 
 # pasting
-bind p paste-buffer    # Paste
-bind C-p choose-buffer # Tmux clipboard history
+bind-key p paste-buffer    # Paste
+bind-key C-p choose-buffer # Tmux clipboard history
 
 # Open new panes in cwd
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
 
 # disable confirmation when killing a window or pane
-bind & kill-window
-bind x kill-pane
+bind-key & kill-window
+bind-key x kill-pane
 
 # open the command prompt with a semicolon
-bind \; command-prompt
+bind-key \; command-prompt
 
 # Statusline
-set -g status-style bg="#2A2A37"
-set -g mode-style bg="#223249"
-set -g message-style fg="#DCD7BA",bg="#2A2A37"
-set -g clock-mode-style 24
-set -g status-interval 1
+set-option -g status-style bg="#2A2A37"
+set-option -g mode-style bg="#223249"
+set-option -g message-style fg="#DCD7BA",bg="#2A2A37"
+set-option -g clock-mode-style 24
+set-option -g status-interval 1
 
-set -g status-left "#[fg=#2A2A37,bg=#98BB6C] #{session_name} #[fg=#98BB6C,bg=#2A2A37]"
-set -g status-left-length 12
+set-option -g status-left "#[fg=#2A2A37,bg=#98BB6C] #{session_name} #[fg=#98BB6C,bg=#2A2A37]"
+set-option -g status-left-length 12
 
-set -g status-right "#[fg=#DCA561,bg=#2A2A37]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#957FB8,bg=#DCA561]#[fg=#2A2A37,bg=#957FB8] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#957FB8]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
+set-option -g status-right "#[fg=#DCA561,bg=#2A2A37]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/plugins/scripts/battery.sh) #[fg=#957FB8,bg=#DCA561]#[fg=#2A2A37,bg=#957FB8] #(~/.config/tmux/plugins/scripts/network.sh) #[fg=#7E9CD8,bg=#957FB8]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
 
-set -g window-status-current-format "#[fg=#43436C,bg=#2A2A37]#[fg=#DCD7BA,bg=#43436C] #{window_index} #{window_name} #[fg=#43436C,bg=#2A2A37]"
-set -g window-status-format "#[fg=#545464,bg=#2A2A37]#[fg=#DCD7BA,bg=#545464] #{window_index} #{window_name} #[fg=#545464,bg=#2A2A37]"
-set -g window-status-activity-style "bold"
-set -g window-status-separator ""
+set-option -g window-status-current-format "#[fg=#43436C,bg=#2A2A37]#[fg=#DCD7BA,bg=#43436C] #{window_index} #{window_name} #[fg=#43436C,bg=#2A2A37]"
+set-option -g window-status-format "#[fg=#545464,bg=#2A2A37]#[fg=#DCD7BA,bg=#545464] #{window_index} #{window_name} #[fg=#545464,bg=#2A2A37]"
+set-option -g window-status-activity-style "bold"
+set-option -g window-status-separator ""
 
-set -g pane-border-style fg="#54546D"
-set -g pane-active-border-style fg="#54546D"
+set-option -g pane-border-style fg="#54546D"
+set-option -g pane-active-border-style fg="#54546D"
 
 # Plugins
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "christoomey/vim-tmux-navigator"
+set-option -g @plugin "tmux-plugins/tpm"
+set-option -g @plugin "tmux-plugins/tmux-yank"
+set-option -g @plugin "tmux-plugins/tmux-sensible"
+set-option -g @plugin "christoomey/vim-tmux-navigator"
 
-set -g @plugin "sainnhe/tmux-fzf"
+set-option -g @plugin "sainnhe/tmux-fzf"
 TMUX_FZF_LAUNCH_KEY="C-f"
 
-set -g @plugin "tmux-plugins/tmux-resurrect"
-set -g @resurrect-strategy-nvim "session"
-set -g @resurrect-capture-pane-contents "on"
-set -g @resurrect-processes "yazi ncdu help"
-set -g @plugin "tmux-plugins/tmux-continuum"
+set-option -g @plugin "tmux-plugins/tmux-resurrect"
+set-option -g @resurrect-strategy-nvim "session"
+set-option -g @resurrect-capture-pane-contents "on"
+set-option -g @resurrect-processes "yazi ncdu help"
+set-option -g @plugin "tmux-plugins/tmux-continuum"
 
 
 # run tpm
