--- a/config/bat/config
+++ b/config/bat/config
@@ -1,24 +1,21 @@
 # Force colorizing output :
 --color=always
 
-# Specify desired highlighting theme. Run `bat --list-themes`
-# for a list of all available themes
+# highlighting theme
 --theme="Kanagawa"
 
-# Enable this to use italic text on the terminal. This is not supported on all
-# terminal emulators (like tmux, by default):
+# Enable this to use italic text on the terminal. This is not supported on all terminal emulators (like tmux, by default):
 #--italic-text=always
 
-# Uncomment the following line to disable automatic paging:
+# disable automatic paging
 --paging=never
 
-# Uncomment the following line if you are using less version >= 551 and want to
-# enable mouse scrolling support in `bat` when running inside tmux. This might
-# disable text selection, unless you press shift.
+# Enable mouse scrolling support in `bat` when running inside tmux. This might disable text selection, unless you press shift.
 --pager="less --RAW-CONTROL-CHARS --quit-if-one-screen --mouse"
 
 # Syntax mappings: map a certain filename pattern to a language.
 --map-syntax "*.rasi:CSS"
 --map-syntax "*zsh*:Bourne Again Shell (bash)"
+--map-syntax ".zcompdump:Bourne Again Shell (bash)"
 --map-syntax "config:Bourne Again Shell (bash)"
 --map-syntax "*.conf:Bourne Again Shell (bash)"
