--- a/config/i3/config
+++ b/config/i3/config
@@ -25,8 +25,15 @@ default_border pixel 0
 # reload config
 bindsym $mod+Shift+r reload
 
+# restart i3
+bindsym $mod+mod1+Shift+r restart
+
+# quit i3
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return split v exec i3-sensible-terminal
 
 # start rofi
 bindsym $mod+space exec "rofi -modi drun,run -show drun"
@@ -36,6 +43,10 @@ bindsym $mod+q kill
 
 # make focused window fullscreen
 bindsym $mod+f fullscreen
+
+# focus parent/child container
+bindsym $mod+a focus parent
+bindsym $mod+d focus child
 
 # change focus
 bindsym $mod+h focus left
@@ -58,8 +69,8 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split
-bindsym $mod+twosuperior split h
-bindsym $mod+ugrave split v
+bindsym $mod+twosuperior split v
+bindsym $mod+ugrave split h
 
 # switch to workspace (french keyboard)
 bindsym $mod+Tab workspace next
@@ -88,14 +99,28 @@ bindsym $mod+Shift+agrave move container workspace 10
 
 # resize window without the mouse
 mode "resize" {
-  bindsym Left resize shrink width 5 px or 5 ppt
-  bindsym Down resize grow height 5 px or 5 ppt
-  bindsym Up resize shrink height 5 px or 5 ppt
-  bindsym Right resize grow width 5 px or 5 ppt
+    bindsym h resize shrink width 10 px or 10 ppt
+    bindsym j resize grow height 10 px or 10 ppt
+    bindsym k resize shrink height 10 px or 10 ppt
+    bindsym l resize grow width 10 px or 10 ppt
 
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-  bindsym $mod+r mode "default"
+    bindsym Left resize shrink width 5 px or 5 ppt
+    bindsym Down resize grow height 5 px or 5 ppt
+    bindsym Up resize shrink height 5 px or 5 ppt
+    bindsym Right resize grow width 5 px or 5 ppt
+
+    bindsym Shift+Left resize shrink width 3 px or 3 ppt
+    bindsym Shift+Down resize grow height 3 px or 3 ppt
+    bindsym Shift+Up resize shrink height 3 px or 3 ppt
+    bindsym Shift+Right resize grow width 3 px or 3 ppt
+
+    bindsym Shift+h resize shrink width 1 px or 1 ppt
+    bindsym Shift+j resize grow height 1 px or 1 ppt
+    bindsym Shift+k resize shrink height 1 px or 1 ppt
+    bindsym Shift+l resize grow width 1 px or 1 ppt
+
+    bindsym Escape mode "default"
+    bindsym $mod+r mode "default"
 }
 bindsym $mod+r mode "resize"
 
@@ -109,135 +134,9 @@ tiling_drag modifier titlebar
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-
 # default gaps 
-gaps outer 12
-gaps inner 8
-
-bindsym $mod+Shift+f gaps outer 0
-
-# gaps
-set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_verti Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
-bindsym $mod+Shift+g mode "$mode_gaps"
-
-mode "$mode_gaps" {
-  bindsym o      mode "$mode_gaps_outer"
-  bindsym i      mode "$mode_gaps_inner"
-  bindsym h      mode "$mode_gaps_horiz"
-  bindsym v      mode "$mode_gaps_verti"
-  bindsym t      mode "$mode_gaps_top"
-  bindsym r      mode "$mode_gaps_right"
-  bindsym b      mode "$mode_gaps_bottom"
-  bindsym l      mode "$mode_gaps_left"
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-
-mode "$mode_gaps_outer" {
-  bindsym plus  gaps outer current plus 5
-  bindsym minus gaps outer current minus 5
-  bindsym 0     gaps outer current set 0
-
-  bindsym Shift+plus  gaps outer all plus 5
-  bindsym Shift+minus gaps outer all minus 5
-  bindsym Shift+0     gaps outer all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_inner" {
-  bindsym plus  gaps inner current plus 5
-  bindsym minus gaps inner current minus 5
-  bindsym 0     gaps inner current set 0
-
-  bindsym Shift+plus  gaps inner all plus 5
-  bindsym Shift+minus gaps inner all minus 5
-  bindsym Shift+0     gaps inner all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_horiz" {
-  bindsym plus  gaps horizontal current plus 5
-  bindsym minus gaps horizontal current minus 5
-  bindsym 0     gaps horizontal current set 0
-
-  bindsym Shift+plus  gaps horizontal all plus 5
-  bindsym Shift+minus gaps horizontal all minus 5
-  bindsym Shift+0     gaps horizontal all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_verti" {
-  bindsym plus  gaps vertical current plus 5
-  bindsym minus gaps vertical current minus 5
-  bindsym 0     gaps vertical current set 0
-
-  bindsym Shift+plus  gaps vertical all plus 5
-  bindsym Shift+minus gaps vertical all minus 5
-  bindsym Shift+0     gaps vertical all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_top" {
-  bindsym plus  gaps top current plus 5
-  bindsym minus gaps top current minus 5
-  bindsym 0     gaps top current set 0
-
-  bindsym Shift+plus  gaps top all plus 5
-  bindsym Shift+minus gaps top all minus 5
-  bindsym Shift+0     gaps top all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_right" {
-  bindsym plus  gaps right current plus 5
-  bindsym minus gaps right current minus 5
-  bindsym 0     gaps right current set 0
-
-  bindsym Shift+plus  gaps right all plus 5
-  bindsym Shift+minus gaps right all minus 5
-  bindsym Shift+0     gaps right all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_bottom" {
-  bindsym plus  gaps bottom current plus 5
-  bindsym minus gaps bottom current minus 5
-  bindsym 0     gaps bottom current set 0
-
-  bindsym Shift+plus  gaps bottom all plus 5
-  bindsym Shift+minus gaps bottom all minus 5
-  bindsym Shift+0     gaps bottom all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-mode "$mode_gaps_left" {
-  bindsym plus  gaps left current plus 5
-  bindsym minus gaps left current minus 5
-  bindsym 0     gaps left current set 0
-
-  bindsym Shift+plus  gaps left all plus 5
-  bindsym Shift+minus gaps left all minus 5
-  bindsym Shift+0     gaps left all set 0
-
-  bindsym Return mode "$mode_gaps"
-  bindsym Escape mode "default"
-}
-
+gaps outer 0
+gaps inner 0
 
 # colorscheme
 set $base00 #232433
