--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -4,8 +4,9 @@ bold_font        family='FiraCode Nerd Font' style=Regular
 italic_font      family='FiraCode Nerd Font' style=Regular
 bold_italic_font family='FiraCode Nerd Font' style=Regular
 
-font_size 14.5
+font_size 14.1
 modify_font underline_position 2
+modify_font strikethrough_position -2
 undercurl_style thin-sparse
 
 # placement strategy
