--- a/config/kitty/kanagawa.conf
+++ b/config/kitty/kanagawa.conf
@@ -1,18 +1,18 @@
 # The basic colors
-foreground                      #dcd7ba
-background                      #1f1f28
-selection_foreground            #c8c093
+foreground                      #DCD7BA
+background                      #1F1F28
+selection_foreground            #C8C093
 selection_background            #223249
 
 # Cursor colors
-cursor                          #c8c093
+cursor                          #C8C093
 
 # URL underline color when overing with mouse
 url_color                       #727169
 
 # Tab bar colors
-active_tab_foreground           #c8c093
-active_tab_background           #1f1f28
+active_tab_foreground           #C8C093
+active_tab_background           #1F1F28
 inactive_tab_foreground         #727169
 inactive_tab_background         #1f1f28
 
@@ -55,3 +55,7 @@ color15 #DCD7BA
 
 color16 #FFA066
 color17 #FF5D62
+color39 #4E8CA2
+color103 #2D4F67
+color179 #DCA561
+color238 #363646
