--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -10,7 +10,7 @@ modify_font strikethrough_position -2
 undercurl_style thin-sparse
 
 # placement strategy
-placement_strategy top
+placement_strategy bottom
 
 # colorscheme
 include kanagawa.conf
