--- a/config/i3/config
+++ b/config/i3/config
@@ -5,7 +5,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FiraCode Nerd Font 10
+font pango:JetBrains Mono Nerd Font 10
 
 # picom
 exec --no-startup-id picom
