--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -53,3 +53,6 @@ enable_audio_bell no
 
 # choose the display server (x11/auto/wayland)
 linux_display_server x11
+
+# key mappings
+map ctrl+v paste_from_clipboard
