improve neovim and zsh configurations

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -71,8 +71,12 @@ bind-key % split-window -h -c "#{pane_current_path}"
 bind-key & kill-window
 bind-key x kill-pane
 
-# open the command prompt with a semicolon
+# for typos
 bind-key \; command-prompt
+bind-key C-c new-window
+
+# switch panes
+bind-key 0 run "tmux split-window -p 40 'zsh -ci tmux_choose_pane'"
 
 # Statusline
 set-option -g status-style bg="#2A2A37"
