--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -15,7 +15,7 @@ placement_strategy bottom
 # colorscheme
 include kanagawa.conf
 background_opacity 0.97
-transparent_background_colors #16161D #2A2A37 #363646
+transparent_background_colors #1A1A22 #16161D #2A2A37 #363646
 
 # cursor
 cursor_shape beam
