--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -412,7 +412,7 @@ disableStartupPopups: false
 # - 'create': initialize a new repo
 # - 'skip': open most recent repo
 # - 'quit': exit Lazygit
-notARepository: prompt
+notARepository: quit
 
 # If true, display a confirmation when subprocess terminates. This allows you to view the output of the subprocess before returning to Lazygit.
 promptToReturnFromSubprocess: true
