improve git_dotfiles to automatically remove embedded tmux plugin repos, remove lazygit bottom bar and add other snippets for padding

--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -134,7 +134,7 @@ gui:
   showCommandLog: true
 
   # If true, show the bottom line that contains keybinding info and useful buttons. If false, this line will be hidden except to display a loader for an in-progress action.
-  showBottomLine: true
+  showBottomLine: false
 
   # If true, show jump-to-window keybindings in window titles.
   showPanelJumps: true
