refactor install.sh, fix tmux functions in aliases.zsh, change some tmux keybindings

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -32,8 +32,8 @@ bind-key -n M-7 select-window -t :7
 bind-key -n M-8 select-window -t :8
 bind-key -n M-9 select-window -t :9
 
-bind-key -n M-Left  swap-window -t -1
-bind-key -n M-Right swap-window -t +1
+bind-key -n S-Left  swap-window -t -1
+bind-key -n S-Right swap-window -t +1
 
 # Vim style pane selection
 bind-key h select-pane -L
@@ -42,14 +42,14 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Use Meta-arrow keys without prefix key to switch panes
-bind-key -n M-Left select-pane -L
-bind-key -n M-Right select-pane -R
-bind-key -n M-Up select-pane -U
-bind-key -n M-Down select-pane -D
+bind-key -n C-Left select-pane -L
+bind-key -n C-Right select-pane -R
+bind-key -n C-Up select-pane -U
+bind-key -n C-Down select-pane -D
 
 # Shift arrow to switch windows
-bind-key -n S-Left  previous-window
-bind-key -n S-Right next-window
+bind-key -n M-Left  previous-window
+bind-key -n M-Right next-window
 
 # pane movement
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
@@ -81,7 +81,7 @@ bind-key 0 run "tmux split-window -p 40 'zsh -ci tmux_choose_pane'"
 # Statusline
 set-option -g status-style bg="#2A2A37"
 set-option -g mode-style bg="#223249"
-set-option -g message-style fg="#DCD7BA",bg="#2A2A37"
+set-option -g message-style fg="#C8C093",bg="#2A2A37"
 set-option -g clock-mode-style 24
 set-option -g status-interval 1
 
@@ -91,7 +91,7 @@ set-option -g status-left-length 12
 set-option -g status-right "#[fg=#DCA561,bg=#2A2A37]#[fg=#2A2A37,bg=#DCA561] #(~/.config/tmux/scripts/battery.sh) #[fg=#957FB8,bg=#DCA561]#[fg=#2A2A37,bg=#957FB8] #(~/.config/tmux/scripts/network.sh) #[fg=#7E9CD8,bg=#957FB8]#[fg=#2A2A37,bg=#7E9CD8] %a %d %b  %H:%M "
 
 set-option -g window-status-current-format "#[fg=#43436C,bg=#2A2A37]#[fg=#DCD7BA,bg=#43436C] #{window_index} #{window_name} #[fg=#43436C,bg=#2A2A37]"
-set-option -g window-status-format "#[fg=#545464,bg=#2A2A37]#[fg=#DCD7BA,bg=#545464] #{window_index} #{window_name} #[fg=#545464,bg=#2A2A37]"
+set-option -g window-status-format "#[fg=#545464,bg=#2A2A37]#[fg=#C8C093,bg=#545464] #{window_index} #{window_name} #[fg=#545464,bg=#2A2A37]"
 set-option -g window-status-activity-style "bold"
 set-option -g window-status-separator ""
 
