--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,6 +6,7 @@ bold_italic_font family='FiraCode Nerd Font' style=Regular
 
 font_size 14.1
 modify_font underline_position 2
+modify_font underline_thickness 150%
 modify_font strikethrough_position -2
 undercurl_style thin-sparse
 
