configure markview.nvim, fix treesitter-context config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -49,10 +49,13 @@ tab_bar_edge top
 # when the mouse is moved, the active window becames the one under the mouse cursor
 focus_follows_mouse yes
 
+# allow remote control
+allow_remote_control yes
+
 # disable bell
 enable_audio_bell no
 
-# choose the display server (x11/auto/wayland)
+# choose the display server (x11/wayland/auto)
 linux_display_server x11
 
 # key mappings
