feat(nvim and others): huge update

--- a/config/fzf.conf
+++ b/config/fzf.conf
@@ -1,15 +1,15 @@
 # colors
---color=bg+:#363646,bg:#1F1F28,border:#54546D,spinner:#7E9CD8,hl:#727169,fg:#dcd7ba,header:#727169,info:#76946A,pointer:#C34043,marker:#957fb8,fg+:#dcd7ba,prompt:#DCA561,hl+:#957fb8
+--color=bg+:#363646,bg:#1F1F28,border:#54546D,spinner:#7E9CD8,hl:#727169,fg:#dcd7ba,header:#727169,info:#957fb8,pointer:#C34043,marker:#76946A,fg+:#dcd7ba,prompt:#DCA561,hl+:#957fb8,selected-bg:#363646
 
 # characters
---pointer="█"
---marker="*"
+--prompt="❯ "
+--pointer=""
+--marker="│"
 
-# disable the scrollbar
+# user interface
 --no-scrollbar
-
-# move info to the right
 --info=right
 
-# enable cycling
+# miscellaneous options
 --cycle
+--multi
