--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,6 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -gq allow-passthrough on
+set-option -g visual-activity off
 set-option terminal-features "cstyle"
 
 # use the r key to reload the tmux configuration
