--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,62 +1,76 @@
 # fonts
-font_family      family='FiraCode Nerd Font' postscript_name=FiraCodeNF-Reg
-bold_font        family='FiraCode Nerd Font' style=Regular
-italic_font      family='FiraCode Nerd Font' style=Regular
-bold_italic_font family='FiraCode Nerd Font' style=Regular
+font_family                     family="JetBrainsMono Nerd Font"
+bold_font                       auto
+italic_font                     auto
+bold_italic_font                auto
 
-font_size 14.1
-modify_font underline_position 2
-modify_font underline_thickness 150%
-modify_font strikethrough_position -2
-undercurl_style thin-sparse
+font_size                       15
+modify_font                     strikethrough_position 110%
+modify_font                     strikethrough_thickness 160%
+modify_font                     underline_position 120%
+modify_font                     underline_thickness 1px
+undercurl_style                 thin-dense
 
-# placement strategy
-placement_strategy bottom
-
-# colorscheme
-include kanagawa.conf
-background_opacity 0.97
-transparent_background_colors #1A1A22 #16161D #2A2A37 #363646
-
-# cursor
-cursor_shape beam
-cursor_shape_unfocused hollow
-cursor_blink_interval 0
-
-# scrollback
-scrollback_indicator_opacity 0.3
-scrollback_fill_enlarged_window yes
-scrollback_pager bat
-scrollback_pager_history_size 8
-
-# mouse
-mouse_hide_wait 1.0
-
-# urls
-url_style straight
-open_url_with $BROWSER
-underline_hyperlinks hover
-
-# behavior when pasting text
-paste_actions confirm,confirm-if-large
-
-# windows
-active_border_color none
-
-# tab bar
-tab_bar_edge top
-
-# when the mouse is moved, the active window becames the one under the mouse cursor
-focus_follows_mouse yes
-
-# allow remote control
-allow_remote_control yes
-
-# disable bell
-enable_audio_bell no
-
-# choose the display server (x11/wayland/auto)
-linux_display_server x11
+symbol_map                      U+276F,U+276E FiraCode Nerd Font
 
 # key mappings
-map ctrl+v paste_from_clipboard
+include                         keymaps.conf
+
+# cursor
+cursor_shape                    beam
+cursor_shape_unfocused          hollow
+cursor_blink_interval           0
+cursor_trail                    3
+
+# scrollback
+scrollback_indicator_opacity    0.3
+scrollback_fill_enlarged_window yes
+scrollback_pager                bat
+scrollback_pager_history_size   8
+
+# colorscheme
+include                         kanagawa.conf
+background_opacity              1
+transparent_background_colors   #1A1A22 #16161D #2A2A37 #363646
+
+# tab bar
+tab_bar_style                   separator
+tab_separator                   "    "
+tab_title_template              "{sup.index} {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+active_tab_title_template       "{sup.index} ❐ {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} {fmt.fg._5B6268}{fmt.nobold}({num_windows})"
+tab_bar_edge                    top
+tab_bar_align                   center
+active_tab_font_style           italic
+
+# mouse
+mouse_hide_wait                 1.0
+pointer_shape_when_dragging     hand
+
+# urls
+url_style                       straight
+open_url_with                   $BROWSER
+underline_hyperlinks            hover
+
+# behavior when pasting text
+paste_actions                   confirm,confirm-if-large
+
+# windows
+active_border_color             none
+
+# tab bar
+tab_bar_edge                    top
+
+# focus the pane under the mouse cursor when it moves
+focus_follows_mouse             yes
+
+# allow remote control
+allow_remote_control            yes
+
+# disable bell
+enable_audio_bell               no
+
+# placement strategy
+placement_strategy              bottom
+
+# choose the display server (x11/wayland/auto)
+linux_display_server            x11
