--- a/config/stylua.toml
+++ b/config/stylua.toml
@@ -1,6 +1,6 @@
 indent_type = "Spaces"
 indent_width = 2
 column_width = 131
-collapse_simple_statement = "FunctionOnly"
+collapse_simple_statement = "Always"
 [sort_requires]
 enabled = true
