--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -23,6 +23,9 @@ open = [
 ]
 
 [plugin]
+append_previewers = [
+{ name = "*", run = "hexyl" },
+]
 prepend_previewers = [
 { name = "*.md", run = "glow" },
 { name = "*/", run = "folder", sync = true },
