fix(nvim): remove terminal padding when invoked from a not interactive shell; feat(nvim): add snippets for cpp
and other random stuff

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -63,13 +63,15 @@ tab_bar_edge                    top
 # focus the pane under the mouse cursor when it moves
 focus_follows_mouse             yes
 
-# allow remote control
+# remote control
 allow_remote_control            yes
+listen_on                       unix:/tmp/mykitty
 
 # disable bell
 enable_audio_bell               no
 
-# placement strategy
+# padding
+window_padding_width            20
 placement_strategy              bottom
 
 # choose the display server (x11/wayland/auto)
