--- a/configs/yazi/package.toml
+++ b/configs/yazi/package.toml
@@ -1,5 +1,37 @@
-[plugin]
-deps = [{ use = "yazi-rs/plugins:full-border", rev = "600614a" }, { use = "yazi-rs/plugins:smart-enter", rev = "600614a" }, { use = "Reledia/glow", rev = "5ce76dc" }, { use = "imsi32/yatline", rev = "9328205" }, { use = "yazi-rs/plugins:jump-to-char", rev = "600614a" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:full-border"
+rev = "b12a9ab"
+hash = "1f3dad061209081a6b04dd6ff2cb06c7"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-enter"
+rev = "b12a9ab"
+hash = "7918aab6a71caf31b58411f789195677"
+
+[[plugin.deps]]
+use = "Reledia/glow"
+rev = "2da96e3"
+hash = "f9ee1436e3b853508d87f7d49dce56e6"
+
+[[plugin.deps]]
+use = "imsi32/yatline"
+rev = "90e0284"
+hash = "8d4cb2dfadcbda045ddaa5c274441f9c"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:jump-to-char"
+rev = "b12a9ab"
+hash = "a670c03eb3760812e044a24f94cedc55"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "b12a9ab"
+hash = "e0ada736ea676c2bbb3ec705a49526ef"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:mount"
+rev = "b12a9ab"
+hash = "dd97eede8e20e59cd2604e8006e470e2"
 
 [flavor]
 deps = []
