--- a/configs/yazi/yazi.toml
+++ b/configs/yazi/yazi.toml
@@ -35,3 +35,13 @@ prepend_previewers = [
 { mime = "*/javascript",           run = "bat" },
 { mime = "*/x-wine-extension-ini", run = "bat" },
 ]
+
+[[plugin.prepend_fetchers]]
+id   = "git"
+name = "*"
+run  = "git"
+
+[[plugin.prepend_fetchers]]
+id   = "git"
+name = "*/"
+run  = "git"
