--- a/configs/yazi/keymap.toml
+++ b/configs/yazi/keymap.toml
@@ -8,11 +8,6 @@ on   = "!"
 run  = 'shell "$SHELL" --block'
 desc = "Open shell here"
 
-[[input.prepend_keymap]]
-on   = "<Esc>"
-run  = "close"
-desc = "Cancel input"
-
 [[manager.prepend_keymap]]
 on   = "l"
 run  = "plugin smart-enter"
@@ -40,8 +35,10 @@ run = "arrow -5"
 on  = "M"
 run = "plugin mount"
 
-prepend_keymap = [
-  # glow.yazi
-  { on = ["<C-e>"], run = "seek 5" },
-  { on = ["<C-y>"], run = "seek -5" },
-]
+[[manager.prepend_keymap]]
+on  = "<C-m>"
+run = 'shell --block -- neomutt -a "$@"'
+
+[[manager.prepend_keymap]]
+on = [ "g", "r" ]
+run = 'shell -- ya emit cd "$(git rev-parse --show-toplevel)"'
