--- a/configs/yazi/package.toml
+++ b/configs/yazi/package.toml
@@ -9,11 +9,6 @@ rev = "b12a9ab"
 hash = "7918aab6a71caf31b58411f789195677"
 
 [[plugin.deps]]
-use = "Reledia/glow"
-rev = "2da96e3"
-hash = "f9ee1436e3b853508d87f7d49dce56e6"
-
-[[plugin.deps]]
 use = "imsi32/yatline"
 rev = "90e0284"
 hash = "8d4cb2dfadcbda045ddaa5c274441f9c"
@@ -32,6 +27,11 @@ hash = "e0ada736ea676c2bbb3ec705a49526ef"
 use = "yazi-rs/plugins:mount"
 rev = "b12a9ab"
 hash = "dd97eede8e20e59cd2604e8006e470e2"
+
+[[plugin.deps]]
+use = "Reledia/hexyl"
+rev = "016a09b"
+hash = "50da29476e744dba37d77fb209328fd1"
 
 [flavor]
 deps = []
