--- a/configs/kitty/kanagawa.conf
+++ b/configs/kitty/kanagawa.conf
@@ -11,10 +11,16 @@ cursor                          #c8c093
 url_color                       #727169
 
 # Tab bar colors
-active_tab_foreground           #c8c093
-active_tab_background           #1f1f28
-inactive_tab_foreground         #727169
-inactive_tab_background         #1f1f28
+active_tab_foreground           #16161d
+active_tab_background           #7e9cd8
+active_tab_font_style           bold
+inactive_tab_foreground         #16161d
+inactive_tab_background         #957fb8
+
+# border colors
+active_border_color             #54546d
+inactive_border_color           #54546d
+bell_border_color               #54546d
 
 # The basic 16 colors
 
