--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -34,13 +34,16 @@ background_opacity              1
 transparent_background_colors   #1a1a22 #16161d #2a2a37 #363646
 
 # tab bar
-tab_bar_style                   separator
-tab_separator                   "    "
-tab_title_template              "{sup.index} {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
-active_tab_title_template       "{sup.index} ❐ {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} {fmt.fg._5B6268}{fmt.nobold}({num_windows})"
-tab_bar_edge                    top
-tab_bar_align                   center
-active_tab_font_style           italic
+tab_bar_edge                    bottom
+tab_bar_align                   left
+tab_bar_style                   custom
+tab_activity_symbol             none
+bell_on_tab                     no
+tab_separator                   ""
+tab_bar_margin_width            0.0
+tab_bar_margin_height           0.0 0.0
+tab_title_template              "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
+active_tab_font_style           bold
 
 # mouse
 mouse_hide_wait                 1.0
@@ -57,9 +60,6 @@ paste_actions                   confirm,confirm-if-large
 # windows
 active_border_color             none
 
-# tab bar
-tab_bar_edge                    top
-
 # focus the pane under the mouse cursor when it moves
 focus_follows_mouse             yes
 
@@ -71,7 +71,7 @@ listen_on                       unix:/tmp/mykitty
 enable_audio_bell               no
 
 # padding
-window_padding_width            20
+window_padding_width            0
 placement_strategy              bottom
 
 # choose the display server (x11/wayland/auto)
