--- a/configs/bat/config
+++ b/configs/bat/config
@@ -1,19 +1,22 @@
-# Force colorizing output :
---color=always
-
 # highlighting theme
 --theme="Kanagawa"
 
-# Enable this to use italic text on the terminal. This is not supported on all terminal emulators (like tmux, by default):
-#--italic-text=always
+# force colorizing the output
+--color=always
+
+# change the tab width
+--tabs 2
 
 # disable automatic paging
 --paging=never
 
-# Enable mouse scrolling support in `bat` when running inside tmux. This might disable text selection, unless you press shift.
+# enable mouse scrolling support in `bat` when running inside tmux. This might disable text selection, unless you press shift.
 --pager="less --RAW-CONTROL-CHARS --quit-if-one-screen --mouse"
 
-# Syntax mappings: map a certain filename pattern to a language.
+# enable this to use italic text on the terminal.
+#--italic-text=always
+
+# syntax mappings: map a certain filename pattern to a language.
 --map-syntax "*.rasi:CSS"
 --map-syntax "*zsh*:Bourne Again Shell (bash)"
 --map-syntax ".zcompdump:Bourne Again Shell (bash)"
