big update, vastly improved C++ debugging workflow

--- a/configs/kitty/keymaps.conf
+++ b/configs/kitty/keymaps.conf
@@ -17,18 +17,18 @@ map kitty_mod+[         previous_window
 map kitty_mod+f         move_window_forward
 map kitty_mod+b         move_window_backward
 map kitty_mod+s         focus_visible_window
-map kitty_mod+1         first_window
-map kitty_mod+2         second_window
-map kitty_mod+3         third_window
-map kitty_mod+4         fourth_window
-map kitty_mod+5         fifth_window
-map kitty_mod+6         sixth_window
-map kitty_mod+7         seventh_window
-map kitty_mod+8         eighth_window
-map kitty_mod+9         ninth_window
-map kitty_mod+0         tenth_window
+map kitty_mod+&         first_window
+map kitty_mod+é         second_window
+map kitty_mod+"         third_window
+map kitty_mod+'         fourth_window
+map kitty_mod+(         fifth_window
+map kitty_mod+-         sixth_window
+map kitty_mod+è         seventh_window
+map kitty_mod+_         eighth_window
+map kitty_mod+ç         ninth_window
+map kitty_mod+à         tenth_window
 
-# windo layout
+# window layout
 map kitty_mod+r>t       goto_layout tall
 map kitty_mod+r>f       goto_layout fat
 map kitty_mod+r>s       goto_layout stack
